interptreter interface changes and minor fix

--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -17,6 +17,9 @@
         </mat-form-field>
     </div>
     <div>
+        <button mat-raised-button class="mr">
+            <span class="btn">Interrupt <i class="fas fa-bolt amber"></i></span>
+        </button>
         <button mat-raised-button (click)="onSave()">
             <span class="btn">Save <i class="fas fa-save"></i></span>
         </button>
