--- a/src/app/main-page/main-page.component.sass
+++ b/src/app/main-page/main-page.component.sass
@@ -7,6 +7,8 @@
         padding: 1rem
         display: grid
         grid-template-rows: auto 15rem
+    .right
+        padding: 1rem 1rem 1rem 0
 .container 
     position: absolute
     top: 0
