fix #13 and all implementations of memory works

--- a/src/app/registri/registri.component.html
+++ b/src/app/registri/registri.component.html
@@ -58,7 +58,7 @@
     </div>
 </div>
 <mat-button-toggle-group name="fType" [(ngModel)]="fType">
-    <mat-button-toggle value="dec">Decimale</mat-button-toggle>
-    <mat-button-toggle value="bin">Binario</mat-button-toggle>
-    <mat-button-toggle value="hex">Esadecimale</mat-button-toggle>
+    <mat-button-toggle value="dec">Decimal</mat-button-toggle>
+    <mat-button-toggle value="bin">Binary</mat-button-toggle>
+    <mat-button-toggle value="hex">Hexadecimal</mat-button-toggle>
 </mat-button-toggle-group>
