--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -16,5 +16,14 @@
     align-items: center
     margin-top: 1rem
 
+.input-interval
+    min-width: 2rem
+    max-width: 6rem
+    margin-right: 1rem
+
+.input-label
+    min-width: 2rem
+    max-width: 6rem
+
 .mr
     margin-right: 1rem
