General graphics fix

--- a/src/app/main-page/main-page.component.sass
+++ b/src/app/main-page/main-page.component.sass
@@ -1,14 +1,24 @@
 @import '~@angular/material/theming'
 
 .main
-    display: grid
-    grid-template-columns: 60% auto
+    display: flex
+    flex-wrap: wrap
+    padding: .5rem
+    max-height: calc( calc( 100vh - 40px ) - 1rem )
     .left
-        padding: 1rem
-        display: grid
-        grid-template-rows: auto 15rem
-    .right
-        padding: 1rem 1rem 1rem 0
+        display: flex
+        flex-direction: column
+        flex: 1
+        min-width: 498px
+    .left, .right
+        padding: .5rem
+        max-height: calc( calc( 100vh - 40px ) - 2rem )
+
+
+@media screen and (max-width: 530px)
+    .main .left
+        min-width: auto
+        
 .container 
     position: absolute
     top: 0
