--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="container">
-    <mat-sidenav #sidenav class="mat-elevation-z4" mode="side" [opened]="sidebarOpened" (openedChange)="sidebarOpenedChange.emit($event)">
+    <mat-sidenav #sidenav class="mat-elevation-z4" [mode]="sidebarMode" [opened]="sidebarOpened" (openedChange)="sidebarOpenedChange.emit($event)">
         <app-documentazione></app-documentazione>
     </mat-sidenav>
     <mat-sidenav-content>
