--- a/src/custom-theme.sass
+++ b/src/custom-theme.sass
@@ -27,8 +27,16 @@ $DLX-RISCV-simulator-light-theme: mat-light-theme($DLX-RISCV-simulator-primary, 
 // that you are using.
 .dark-theme
     @include angular-material-theme($DLX-RISCV-simulator-dark-theme)
+    .mat-drawer-backdrop.mat-drawer-shown
+        background-color: #10101099
     .memory
         background-color: map-get($mat-gray, 800)
+    .gpr-back
+        background-color: #2c2c2c
+        color: #d4d4d4
+    .registro
+        background-color: map-get($mat-gray, 800)
+        color: #f0f0f0
     .mat-sidenav
         background: #383838
     ::-webkit-scrollbar-thumb 
