--- a/src/app/memory/memory.component.sass
+++ b/src/app/memory/memory.component.sass
@@ -40,6 +40,7 @@ $color-value: A200
     height: $mem-height
     border-radius: .5rem
     overflow: hidden
+    transition: background .4s cubic-bezier(.25,.8,.25,1)
     @include mat-elevation(4)
     .dev
         display: flex
