--- a/src/app/registri/registri.component.sass
+++ b/src/app/registri/registri.component.sass
@@ -43,7 +43,7 @@
 
 .registro, .index
     font-size: 1rem
-    transition: font-size 300ms, width 300ms, height 300ms
+    transition: font-size 300ms, width 300ms, height 300ms, background .4s cubic-bezier(.25,.8,.25,1)
 
 @media screen and (min-height: 866px)
     .registro, .index
