--- a/src/custom-theme.sass
+++ b/src/custom-theme.sass
@@ -49,6 +49,10 @@ $DLX-RISCV-simulator-light-theme: mat-light-theme($DLX-RISCV-simulator-primary, 
     @include angular-material-theme($DLX-RISCV-simulator-light-theme)
     .memory
         background-color: white
+    .gpr-back
+        background-color: #f0f0f0
+    .registro
+        background-color: white
     ::-webkit-scrollbar-thumb 
         background: #bbbbbb
         border-radius: 3px
