modifiche grafiche e interprete dlx

--- a/src/app/editor/codemirror-theme.sass
+++ b/src/app/editor/codemirror-theme.sass
@@ -12,6 +12,9 @@
     .CodeMirror-linenumber
         color: #BDBDBD
 
+    .CodeMirror-linenumber:after
+        color: #7d7d7d
+
     .CodeMirror-cursor
         border-left: 1px solid #FAFAFA
 
@@ -57,12 +60,15 @@
     color: #080808
     .CodeMirror-gutters
         background-color: #f0f0f0
-        color: #a0a0a0
-
+        color: #606060
+    
     .CodeMirror-guttermarker,
     .CodeMirror-guttermarker-subtle,
     .CodeMirror-linenumber
-        color: #a0a0a0
+        color: #606060
+    
+    .CodeMirror-linenumber:after
+        color: #b0b0b0
 
     .CodeMirror-cursor
         border-left: 1px solid #0A0A0A
