--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -33,17 +33,11 @@
             height: fit-content
             margin-top: 13.5px
 
-.input-interval
+.input-interval, .input-label
     min-width: 2rem
     max-width: 6rem
-    margin-right: 1rem
-
-.input-label
-    min-width: 2rem
-    max-width: 6rem
-
-.mr
-    margin-right: 1rem
+.input-interval, .input-label, .mr
+    margin-right: .5rem
 
 input[type=number]
     -webkit-appearance: textfield
