--- a/src/styles.sass
+++ b/src/styles.sass
@@ -7,6 +7,13 @@
     max-width: 100%
     min-height: 100%
     max-height: 100%
+    .CodeMirror-linenumbers
+        padding-right: 1.2ch
+    .CodeMirror-linenumber:after
+        content: 'h'
+        position: absolute
+        padding-left: .2ch
+        color: #7d7d7d
 
 .mat-drawer-content.mat-sidenav-content .main
     height: 100%
