--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -12,7 +12,7 @@
         </button>
         <mat-form-field class="input-interval">
             <mat-label>Interval (ms)</mat-label>
-            <input matInput type="number" [(ngModel)]="interval">
+            <input matInput type="number" [(ngModel)]="interval" min="1">
         </mat-form-field>
         <button mat-raised-button class="mr" (click)="onStop()" [disabled]="isStopDisabled">
             <span class="btn">Stop <i class="fas fa-square red"></i></span>
