DLX spellcheck, editor code error

--- a/src/app/editor/codemirror-theme.sass
+++ b/src/app/editor/codemirror-theme.sass
@@ -48,12 +48,16 @@
     
     .runned
         background-color: #ffff002b
-        .CodeMirror-linenumber.CodeMirror-gutter-elt
+        .CodeMirror-linenumber
             background-color: #ffff002b
     .next
         background-color: #00ff002b
-        .CodeMirror-linenumber.CodeMirror-gutter-elt
+        .CodeMirror-linenumber
             background-color: #00ff002b
+    .error
+        background-color: #ff35354d
+        .CodeMirror-linenumber
+            background-color: #ff35354d
 
 .light-theme .CodeMirror
     background-color: #ffffff
@@ -103,11 +107,11 @@
 
     .runned
         background-color: #c8c8002b
-        .CodeMirror-linenumber.CodeMirror-gutter-elt
+        .CodeMirror-linenumber
             background-color: #c8c8002b
     .next
         background-color: #00c8002b
-        .CodeMirror-linenumber.CodeMirror-gutter-elt
+        .CodeMirror-linenumber
             background-color: #00c8002b
 
 .cm-s-dlx-riscv-theme.CodeMirror
