--- a/src/styles.sass
+++ b/src/styles.sass
@@ -7,8 +7,8 @@
     max-width: 100%
     min-height: 100%
     max-height: 100%
-    .CodeMirror-linenumbers
-        padding-right: 1.2ch
+    .CodeMirror-linenumber
+        padding-right: 1.5ch
     .CodeMirror-linenumber:after
         content: 'h'
         position: absolute
