--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -1,3 +1,4 @@
+@import '~@angular/material/theming'
 :host
     width: 100%
     height: 100%
@@ -5,6 +6,14 @@
     flex-direction: column
     ngx-codemirror
         flex: 1 1 auto
+        transition: all 300ms
+
+.error-message
+    z-index: -1
+    margin-top: .5rem
+    mat-card
+        background-color: map-get($mat-red, 900)
+
 .btn
     display: flex
     align-items: center
@@ -16,6 +25,9 @@
     color: #00ff00
 .amber
     color: #ffcc00
+
+button[disabled=true] svg
+    opacity: 0.5
 
 .btn-container
     display: flex
