--- a/src/app/registri/registri.component.sass
+++ b/src/app/registri/registri.component.sass
@@ -16,7 +16,7 @@
         overflow: hidden
         border-radius: 5px
         margin: .5rem 0
-        @include mat-elevation(4)
+        @include mat-elevation(2)
         .registro
             border-radius: 0
         &>:not(:last-of-type)
@@ -37,13 +37,18 @@
         padding: .2rem
         border-radius: 5px
         &.special
-            @include mat-elevation(4)
+            @include mat-elevation(2)
             margin: .5rem 0
 
 
 .registro, .index
     font-size: 1rem
     transition: font-size 300ms, width 300ms, height 300ms, background .4s cubic-bezier(.25,.8,.25,1)
+
+#fType
+    @include mat-elevation(2)
+    border: none
+    width: 100%
 
 @media screen and (min-height: 866px)
     .registro, .index
