--- a/src/app/editor/codemirror-theme.sass
+++ b/src/app/editor/codemirror-theme.sass
@@ -143,3 +143,6 @@
     .CodeMirror-matchingbracket
         text-decoration: underline
         color: white !important
+
+    .CodeMirror-scrollbar-filler
+        background-color: transparent
