--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -1,5 +1,10 @@
 @import '~@angular/material/theming'
+
 :host
+    width: 100%
+    height: 100%
+    
+form
     width: 100%
     height: 100%
     display: flex
@@ -38,18 +43,18 @@ button[disabled=true] svg
         flex-wrap: wrap
         .mat-raised-button
             height: fit-content
-            margin-top: 13.5px
+            margin: 13.5px 0
     .right
         flex: 0 0 auto
         .mat-raised-button
             height: fit-content
-            margin-top: 13.5px
+            margin: 13.5px 0
 
 .input-interval, .input-label
     min-width: 2rem
     max-width: 6rem
 .input-interval, .input-label, .mr
-    margin-right: .5rem
+    margin-right: .5rem !important
 
 input[type=number]
     -webkit-appearance: textfield
