--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,7 +2,7 @@
 @import "app/editor/codemirror-theme"
 
 .CodeMirror
-    font-size: 1.5rem
+    font-size: 1.5em
     min-width: 100%
     max-width: 100%
     min-height: 100%
@@ -51,7 +51,3 @@ mat-toolbar a
 
 sup, sub
     line-height: 0
-
-@media screen and (max-width: 360px)
-    .CodeMirror
-        font-size: 1.2rem
