--- a/src/app/editor/editor.component.sass
+++ b/src/app/editor/editor.component.sass
@@ -35,20 +35,13 @@ button[disabled=true] svg
     opacity: 0.5
 
 .btn-container
-    display: flex
-    justify-content: space-between
     margin-top: 1rem
-    .left
-        display: flex
-        flex-wrap: wrap
-        .mat-raised-button
-            height: fit-content
-            margin: 13.5px 0
     .right
-        flex: 0 0 auto
-        .mat-raised-button
-            height: fit-content
-            margin: 13.5px 0
+        float: right
+        
+    .mat-raised-button
+        height: fit-content
+        margin: 13.5px 0
 
 .input-interval, .input-label
     min-width: 2rem
