rename: registers and documentation

--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -4,7 +4,7 @@
 </mat-form-field>
 <div class="mat-accordion-container">
   <mat-accordion>
-    <mat-expansion-panel *ngFor="let instr of documentazioneFiltrata">
+    <mat-expansion-panel *ngFor="let instr of documentationFiltered">
       <mat-expansion-panel-header>
         <mat-panel-title class="name">{{instr.name}}</mat-panel-title>
         <mat-panel-description class="type">{{instr.type}}</mat-panel-description>
