--- a/src/custom-theme.sass
+++ b/src/custom-theme.sass
@@ -34,7 +34,7 @@ $DLX-RISCV-simulator-light-theme: mat-light-theme($DLX-RISCV-simulator-primary, 
     .gpr-back
         background-color: #2c2c2c
         color: #d4d4d4
-    .registro
+    .register
         background-color: map-get($mat-gray, 800)
         color: #f0f0f0
     .mat-sidenav
@@ -51,7 +51,7 @@ $DLX-RISCV-simulator-light-theme: mat-light-theme($DLX-RISCV-simulator-primary, 
         background-color: white
     .gpr-back
         background-color: #f0f0f0
-    .registro
+    .register
         background-color: white
     ::-webkit-scrollbar-thumb 
         background: #bbbbbb
