--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="container">
     <mat-sidenav #sidenav class="mat-elevation-z4" [mode]="sidebarMode" [opened]="sidebarOpened" (openedChange)="sidebarOpenedChange.emit($event)">
-        <app-documentazione></app-documentazione>
+        <app-documentation></app-documentation>
     </mat-sidenav>
     <mat-sidenav-content>
         <div class="main">
@@ -9,7 +9,7 @@
                 <app-memory></app-memory>
             </div>
             <div class="right">
-                <app-registri [registri]="registers"></app-registri>
+                <app-registers [registers]="registers"></app-registers>
             </div>
         </div>
     </mat-sidenav-content>
