--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
         <span *ngIf="!sidebarOpened"><i class="fas fa-book"></i></span>
         <span *ngIf="sidebarOpened"><i class="fas fa-book-open"></i></span>
     </button>
-    <span>Simulator</span>
+    <span id="title">Simulator</span>
     <a mat-button routerLink="/dlx" routerLinkActive="active">DLX</a>
     <a mat-button routerLink="/rv32i" routerLinkActive="active">RV32I</a>
     <span class="spacer"></span>
