--- a/src/app/registers/registers.component.html
+++ b/src/app/registers/registers.component.html
@@ -1,4 +1,4 @@
-<div class="registers">
+<div class="registers {{fType}}">
     <div class="gpr">
         <span>GPR</span>
         <div class="gpr-back" *ngIf="isDLX">
