--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
     <a mat-button routerLink="/dlx" routerLinkActive="active">DLX</a>
     <a mat-button routerLink="/rv32i" routerLinkActive="active">RV32I</a>
     <span class="spacer"></span>
+    <a mat-button routerLink="/about" routerLinkActive="active">About</a>
     <button mat-button mat-icon-button matTooltip="Theme" (click)="toggleTheme()">
         <span *ngIf="theme == 'light'"><i class="fas fa-lightbulb"></i></span>
         <span *ngIf="theme == 'dark'"><i class="far fa-lightbulb"></i></span>
