dlx doc non breaking hyphen and doc text-align: justify

--- a/src/app/documentation/documentation.component.html
+++ b/src/app/documentation/documentation.component.html
@@ -10,7 +10,7 @@
         <mat-panel-description class="type">{{instr.type}}</mat-panel-description>
         <mat-panel-description class="syntax">{{instr.syntax}}</mat-panel-description>
       </mat-expansion-panel-header>
-      <p [innerHTML]="instr.description"></p>
+      <p class="description" [innerHTML]="instr.description"></p>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
