--- a/src/app/dialogs/message-dialog.component.html
+++ b/src/app/dialogs/message-dialog.component.html
@@ -1,4 +1,4 @@
 <mat-dialog-content>{{data.message}}</mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>ok</button>
+    <button mat-button mat-dialog-close>Ok</button>
 </mat-dialog-actions>
